<resources>
    <string name="app_name">Aghezty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <array name="check_out_step">
        <item>Customer</item>
        <item>Shipping</item>
        <item>Payment</item>
        <item>Confirm</item>

    </array>

    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>


    <string name="edit_profile">Edit Profile</string>
    <string name="my_addresses">My Addresses</string>
    <string name="change_password">Change Password</string>
    <string name="logout">LogOut</string>
    <string name="search">Search</string>
    <string name="best_categories">Best Categories</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="just_for_you">Just For You</string>
    <string name="check_connection">Oooopss...  Check your Connection</string>
    <string name="order_by">Order By</string>
    <string name="filter_by">Filter By</string>
    <string name="no_match">No Match</string>
    <string name="all">All</string>
    <string name="h_to_l">High To Low Price</string>
    <string name="l_to_h">Low To High Price</string>
    <string name="coupon">Coupon</string>
    <string name="apply">Apply</string>
    <string name="coupon_discount">Coupon Discount :</string>
    <string name="egp">EGP</string>
    <string name="total">Total :</string>
    <string name="check_out">Check Out</string>
    <string name="cart_empty">The Cart is Empty</string>
    <string name="success_delete">Successful Delete Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="aghezty_com_2020_all_rights_reserved">Aghezty.com 2020 ©. All Rights Reserved.</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="new_address">New Address</string>
    <string name="governorate">Governorate</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="complete_fields_warining">Complete All Fields Please</string>
    <string name="success_add_address">Successful Add New Address</string>
    <string name="successful_update_address">Successful Update Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="no_addresses">You have no Addresses</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="check_connection_warning">Check your Connection Please</string>
    <string name="pass_least_6_char_warning">The password must be at least 6 characters</string>
    <string name="confirm_pass">Confirm Your Password please</string>
    <string name="successful_change_pass">Successful Change password</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="email_not_correct_warning">Email Format Not Correct</string>
    <string name="available_quantity">Available Quantity :</string>
    <string name="details">Details</string>
    <string name="evaluation">Evaluation</string>
    <string name="overall_rating">OverAll Rating</string>
    <string name="based_on">Based On</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="already_in_cart">Already in Cart</string>
    <string name="success_add_cart">Success Add to Cart</string>
    <string name="next">NEXT</string>
    <string name="shipping_address">SHIPPING ADDRESS</string>
    <string name="shipping_amount">Shipping Amount</string>
    <string name="select_from_my_addresses">Select From My Addresses</string>
    <string name="back">Back</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="credit_on_delivery">Credit on Delivery</string>
    <string name="paypal">Paypal</string>
    <string name="customer_information">CUSTOMER INFORMATION</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="payment_method_field">Payment Method</string>
    <string name="total_price">Total Price</string>
    <string name="sub_total">Sub Total</string>
    <string name="submit">Submit</string>
    <string name="select_address_warning">Select your Address Please</string>
    <string name="successful_checkout">Successful Order Checkout</string>
    <string name="heavy_machines">Heavy Machines</string>
    <string name="light_devices">Light Devices</string>
    <string name="price">Price</string>
    <string name="clear">CLEAR</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="success_signup">Success Sign Up</string>
    <string name="successful_login">Successful Login</string>
    <string name="address_number">Address Number</string>
    <string name="done">Done</string>
    <string name="order_id">Order ID</string>
    <string name="order_status">Order Status</string>
    <string name="order_time">Order Time</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="pay_with_paypal">Pay with <b>Paypal</b></string>
    <string name="paypal_id">Payment ID</string>
    <string name="paypal_state">Payment State</string>
    <string name="checkout_total_price">Order Total Price</string>
    <string name="no_order">You have no Order yet</string>
    <string name="my_orders">My Orders</string>
    <string name="language">Language</string>
    <string name="an_lang">Arabic</string>


    <string-array name="price_range_filter">

        <item>All</item>
        <item>Less Than 1000</item>
        <item>From 1000 TO 3000</item>
        <item>From 3000 TO 6000</item>
        <item>From 6000 TO 10000</item>
        <item>More Than 10000</item>


    </string-array>


    <string-array name="order_by">

        <item>All</item>
        <item>High To Low Price</item>
        <item>Low To High Price</item>

    </string-array>








</resources>
