<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CustomerInformation">

    <com.gturedi.views.StatefulLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/stateful"
        >





   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="15dp"
       >


       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/checkout_info_margin">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:text="@string/customer_information"
           android:textColor="@color/dark_blue"
           android:textStyle="bold"
           android:textSize="@dimen/checout_title_size"
           android:id="@+id/customer_info"
           />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:id="@+id/name_info"
           android:layout_below="@+id/customer_info"

           android:layout_marginTop="20dp"
           >

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="start"
               android:text="@string/name"
               android:textColor="@color/dark_blue"
               android:textSize="@dimen/checout_text_size" />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="@dimen/checkout_field_height"
               android:hint="@string/name"
               android:inputType="textPersonName"
               android:gravity="center"
               android:imeOptions="actionNext"
               android:layout_marginTop="10dp"
               android:background="@drawable/border_e"
               android:id="@+id/name_edit"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_below="@+id/name_info"
           android:layout_alignParentRight="true"
           android:layout_marginTop="20dp"
           android:id="@+id/email_info"
           >

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="start"
               android:text="@string/e_mail"
               android:textColor="@color/dark_blue"
               android:textSize="@dimen/checout_text_size" />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="@dimen/checkout_field_height"
               android:hint="@string/e_mail"
               android:imeOptions="actionNext"
               android:inputType="textEmailAddress"
               android:gravity="center"
               android:layout_marginTop="10dp"
               android:background="@drawable/border_e"
               android:id="@+id/email_edit"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_below="@+id/email_info"

           android:layout_marginTop="20dp"
           android:id="@+id/Phone_info"
           >

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="start"
               android:textColor="@color/dark_blue"
               android:text="@string/phone_number"
               android:textSize="@dimen/checout_text_size" />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="@dimen/checkout_field_height"
               android:hint="@string/phone_number"
               android:inputType="phone"
               android:gravity="center"
               android:imeOptions="actionDone"
               android:layout_marginTop="10dp"
               android:background="@drawable/border_e"
               android:id="@+id/phone_edit"
               />
       </LinearLayout>

       </RelativeLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal"
           android:weightSum="2"
           android:id="@+id/buttons"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           >


           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:background="@drawable/button_background"
               android:text="@string/next"
               android:textColor="@android:color/white"
               android:textSize="@dimen/checout_text_size"
               android:layout_marginEnd="5dp"
               android:id="@+id/next"
               android:layout_marginBottom="5dp"
               />




       </LinearLayout>



   </RelativeLayout>



    </com.gturedi.views.StatefulLayout>

</FrameLayout>