<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"

        >


        <com.gturedi.views.StatefulLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/stateful">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"

            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_address"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:textSize="23sp"
                android:id="@+id/new_address"

                android:layout_centerInParent="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/city_info"
                android:layout_below="@+id/governorate_info"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/city"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_e"
                    android:layout_marginTop="10dp"
                    >

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:hint="@string/city"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:id="@+id/city_edit"
                        android:layout_gravity="center"
                        />

                </RelativeLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/governorate_info"
                android:layout_below="@+id/new_address"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/governorate"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_e"
                    android:layout_marginTop="10dp"
                    >

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:imeOptions="actionNext"

                        android:id="@+id/governorate_edit"
                        android:inputType="textPersonName"
                        android:layout_gravity="center"
                        />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/address_info"
                android:layout_below="@+id/city_info"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/address"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/address"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_e"
                    android:id="@+id/address_edit"
                    android:inputType="textPersonName"
                    />

            </LinearLayout>











            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/save"
                android:layout_below="@+id/address_info"
                android:background="@drawable/button_background"
                android:text="@string/save"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_marginTop="20dp"


                />




        </RelativeLayout>



        </com.gturedi.views.StatefulLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>